# AI_Training-3.0

./: .gitignore  .python-version  README.html  README.md  annotation_DEV.py  augmentation_settings.json  check_versions.py  config.py  cuda_check.py  debug_imports.py  detection_settings.json  main.py  model_val.py  package.json  project_manager.py  pyproject.toml  requirements.txt  yolo_optimize.py
.claude/: settings.local.json
.development/: check_versions.py  cuda_check.py
YOLOv8/yolov8n/: args.yaml
dataset_viewer/: app.py
dataset_viewer/static/: styles.css
dataset_viewer/static/js/: main.js
dataset_viewer/templates/: gallery.html  index.html
demo_model/: data.yaml
exp10-new/yolov8n-c3k2-6/: args.yaml
gui/: __init__.py  augmentation_app.py  augmentation_common.py  augmentation_methods.py  augmentation_preview.py  augmentation_processor.py  augmentation_settings.py  camera_app.py  camera_settings.json  crop_for_train_app.py  dataset_splitter.py  dataset_viewer.py  gui_dashboard.py  gui_main.py  gui_settings.py  gui_train.py  image_labeling.py  label_checker_app.py  live_detection.py  main_menu.py  verification_app.py  verification_core.py  verification_utils.py
gui/config/: parser.py
gui/errors/: read_only_parameter_error.py  streaming_handler_error.py
gui/src/: nxt_camera_handler_base.py  nxt_config.py  nxt_rest_connection.py  nxt_streaming_handler.py
gui/training/: __init__.py  dashboard_view.py  metrics_info.py  parameter_info.py  settings_ui.py  settings_window.py  training_thread.py  training_utils.py
gui/utils/dto/: camera_roi.py  rest_result.py
gui/utils/settings/: camera_settings_base.py  color_settings_base.py  trigger_settings_base.py
gui/utils/streams/: __init__.py  stream1.py  stream2.py  stream3.py  stream_parent.py
nxt_camera/: __init__.py  camera.py
project_manager/: __init__.py  config.py  dialogs.py  project_manager.py  utils.py  workflow.py
utils/: augmentation_utils.py  dataset_utils.py  labeling_utils.py  make_ncnn_model.py  validation.py
yolo/: __init__.py  train_runner.py  yolo_train.py
