[project]
name = "yolo-training-app"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "psutil>=5.9.0",
    "numpy<=2.1.1",
    "pillow>=10.2.0",
    "requests>=2.31.0",
    "optuna>=4.2.1",
    "albumentations",
    "emoji>=2.14.1",
    "markdown>=3.7",
    "ids-peak>=1.10.0.0.4",
    "ids-peak-ipl>=1.15.0.0.3",
    "ipykernel>=6.29.5",
    "opencv-python>=4.11.0.86",
    "PyQt6>=6.8.1",
    "pyserial>=3.5",
    "pyueye>=4.96.952",
    "pyarrow>=14.0.1",
    "ultralytics>=8.3.89",
]

[tool.uv.pip]
index-strategy = "unsafe-best-match"
index-url = "https://download.pytorch.org/whl/cu126"
extra-index-url = ["https://pypi.org/simple"]

[tool.setuptools]
packages = ["gui", "yolo", "nxt_camera", "utils"]

